--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "main": "src",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.2",
     "fast-glob": "^3.0.4",
+    "v8-compile-cache": "^2.1.0",
     "yargs": "^13.3.0"
   }
 }
